# bpe

./: .gitignore  embedding_demo.ipynb  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
assets/: index-Bo6pllxi.js  index-CQe79UBH.js  index-D623Sp0j.css
src/: App.css  App.jsx  index.css
