[project]
name = "bpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "transformers>=5.3.0",
]
